<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_gravity=""
    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:textColor="@color/white"
        android:text="Creative Juices"
        android:textStyle="bold"
        android:padding="4dp"
        android:textSize="24sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/company_mission"
        android:textStyle="bold"
        android:textSize="15sp" />
    <br></br>
    <br></br>
    <TextView
        android:layout_gravity=""
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:text="@string/about_company"
        android:orientation="horizontal"
        android:padding="4dp"
        android:textSize="15sp" />
    <TextView
        android:orientation="vertical"
        android:textAlignment="gravity"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/company_text"
        android:textSize="10sp" />
    <TextView
        android:orientation="vertical"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/company_text"
        android:textSize="10sp" />

    <TextView
        android:orientation="vertical"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/contact_for_appt"
        android:textSize="10sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_our_app" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_our_staff" />

</LinearLayout>